--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "ejs": "^3.1.3"
+    "ejs": "^3.1.3",
+    "crypto-js": "^3.3.0"
   },
   "engines": {
     "node": "12.x"
