--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "ejs": "^3.1.3",
-    "crypto-js": "^3.3.0"
+    "crypto-js": "^3.3.0",
+    "sigidb": "^2.0.0"
   },
   "engines": {
     "node": "12.x"
