--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.1",
     "ejs": "^3.1.3",
     "crypto-js": "^3.3.0",
-    "sigidb": "^2.0.0"
+    "sigidb": "^2.0.0",
+    "discord.js": "^12.2.0"
   },
   "engines": {
     "node": "12.x"
