--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "ejs": "^3.1.3",
     "crypto-js": "^3.3.0",
     "sigidb": "^2.0.0",
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.2.0",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.4",
+    "g-i-s": "^2.1.4"
   },
   "engines": {
     "node": "12.x"
