--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "ejs": "^3.1.3",
+    "animals": "^0.0.3",
+    "canvas": "^2.6.1",
     "crypto-js": "^3.3.0",
-    "sigidb": "^2.0.0",
     "discord.js": "^12.2.0",
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
+    "g-i-s": "^2.1.4",
+    "getanimals": "^3.0.0",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-discord": "^0.1.4",
-    "g-i-s": "^2.1.4"
+    "random-animals-apis": "^1.1.0",
+    "sigidb": "^2.0.0",
+    "util": "^0.12.3"
   },
   "engines": {
     "node": "12.x"
